@@ -5,13 +5,13 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 
+import lombok.Getter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -28,6 +28,7 @@ public class SimpleProjectEngineFactory<T> {
 
     protected final Logger log = LoggerFactory.getLogger(SimpleProjectEngineFactory.class);
     protected final Map<String, Object> externalParameters;
+    @Getter
     protected final boolean executionMode;
     protected final ClassLoader classLoader;
     protected final List<Path> projectDependencies;
@@ -42,7 +43,7 @@ public class SimpleProjectEngineFactory<T> {
         protected String workspace;
         protected ClassLoader classLoader;
         protected Class<T> interfaceClass = null;
-        protected Map<String, Object> externalParameters = Collections.emptyMap();
+        protected Map<String, Object> externalParameters = Map.of();
         protected boolean executionMode = true;
         protected String[] projectDependencies;
 
@@ -60,7 +61,7 @@ public class SimpleProjectEngineFactory<T> {
         }
 
         public SimpleProjectEngineFactoryBuilder<T> setExternalParameters(Map<String, Object> externalParameters) {
-            this.externalParameters = Objects.requireNonNullElse(externalParameters, Collections.emptyMap());
+            this.externalParameters = Objects.requireNonNullElse(externalParameters, Map.of());
             return this;
         }
 
@@ -177,7 +178,7 @@ public class SimpleProjectEngineFactory<T> {
 
     private Set<ProjectDescriptor> getDependentProjects(ProjectDescriptor project,
                                                         Collection<ProjectDescriptor> projectsInWorkspace) {
-        Set<ProjectDescriptor> projectDescriptors = new HashSet<>();
+        var projectDescriptors = new HashSet<ProjectDescriptor>();
         addDependentProjects(projectDescriptors, project, projectsInWorkspace);
         return projectDescriptors;
     }
@@ -211,12 +212,12 @@ public class SimpleProjectEngineFactory<T> {
     }
 
     protected Collection<ProjectDescriptor> buildProjectDescriptors() throws ProjectResolvingException {
-        Collection<ProjectDescriptor> projectDescriptors = new ArrayList<>();
+        var projectDescriptors = new ArrayList<ProjectDescriptor>();
         ProjectResolver projectResolver = ProjectResolver.getInstance();
-        ProjectDescriptor projectDescriptor = getProjectDescriptor();
+        var projectDescriptor = getProjectDescriptor();
         if (projectDependencies != null) {
             var projects = new ArrayList<ProjectDescriptor>();
-            ClassLoader oldClassLoader = Thread.currentThread().getContextClassLoader();
+            var oldClassLoader = Thread.currentThread().getContextClassLoader();
             try {
                 if (classLoader != null) {
                     Thread.currentThread().setContextClassLoader(classLoader);
@@ -234,7 +235,7 @@ public class SimpleProjectEngineFactory<T> {
             } finally {
                 Thread.currentThread().setContextClassLoader(oldClassLoader);
             }
-            Set<ProjectDescriptor> dependentProjects = getDependentProjects(projectDescriptor, projects);
+            var dependentProjects = getDependentProjects(projectDescriptor, projects);
             projectDescriptors.addAll(dependentProjects);
         }
         projectDescriptors.add(projectDescriptor);
@@ -248,10 +249,6 @@ public class SimpleProjectEngineFactory<T> {
             dependencyManager = buildDependencyManager();
         }
         return dependencyManager;
-    }
-
-    public boolean isExecutionMode() {
-        return executionMode;
     }
 
     public Class<?> getInterfaceClass() throws RulesInstantiationException, ProjectResolvingException {
@@ -274,7 +271,7 @@ public class SimpleProjectEngineFactory<T> {
     public final synchronized ProjectDescriptor getProjectDescriptor() throws ProjectResolvingException {
         if (this.projectDescriptor == null) {
             ProjectResolver projectResolver = ProjectResolver.getInstance();
-            ClassLoader oldClassLoader = Thread.currentThread().getContextClassLoader();
+            var oldClassLoader = Thread.currentThread().getContextClassLoader();
             ProjectDescriptor pd;
             try {
                 if (classLoader != null) {
@@ -297,10 +294,10 @@ public class SimpleProjectEngineFactory<T> {
     public final synchronized RulesInstantiationStrategy getRulesInstantiationStrategy() throws RulesInstantiationException,
             ProjectResolvingException {
         if (rulesInstantiationStrategy == null) {
-            RulesInstantiationStrategy instantiationStrategy = getStrategy(getProjectDescriptor().getModules(),
+            var instantiationStrategy = getStrategy(getProjectDescriptor().getModules(),
                     getDependencyManager());
 
-            Map<String, Object> parameters = ProjectExternalDependenciesHelper
+            var parameters = ProjectExternalDependenciesHelper
                     .buildExternalParamsWithProjectDependencies(externalParameters, getProjectDescriptor());
 
             instantiationStrategy.setExternalParameters(parameters);
