@@ -2,7 +2,10 @@ package org.openl;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
+
+import lombok.Getter;
 
 import org.openl.message.OpenLMessage;
 import org.openl.message.OpenLMessagesUtils;
@@ -17,14 +20,17 @@ import org.openl.types.IOpenClass;
  */
 public class CompiledOpenClass {
 
+    @Getter
     private final Collection<OpenLMessage> allMessages;
 
+    @Getter
     private final Collection<OpenLMessage> messages;
 
     private final IOpenClass openClass;
 
     private boolean hasErrors;
 
+    @Getter
     private final ClassLoader classLoader;
 
     public CompiledOpenClass(IOpenClass openClass, Collection<OpenLMessage> messages) {
@@ -34,10 +40,10 @@ public class CompiledOpenClass {
     public CompiledOpenClass(IOpenClass openClass,
                              Collection<OpenLMessage> allMessages,
                              Collection<OpenLMessage> messages) {
-        this.messages = messages != null ? Collections.unmodifiableCollection(messages) : Collections.emptyList();
+        this.messages = messages != null ? Collections.unmodifiableCollection(messages) : List.of();
         this.openClass = Objects.requireNonNull(openClass, "openClass cannot be null");
         if (allMessages == null) {
-            this.allMessages = Collections.emptyList();
+            this.allMessages = List.of();
         } else {
             this.allMessages = Collections.unmodifiableCollection(allMessages);
             this.hasErrors = !OpenLMessagesUtils.filterMessagesBySeverity(allMessages, Severity.ERROR).isEmpty();
@@ -60,26 +66,14 @@ public class CompiledOpenClass {
 
     public void throwErrorExceptionsIfAny() {
         if (hasErrors()) {
-            Collection<OpenLMessage> errorMessages = OpenLMessagesUtils.filterMessagesBySeverity(allMessages,
+            var errorMessages = OpenLMessagesUtils.filterMessagesBySeverity(allMessages,
                     Severity.ERROR);
             throw new CompositeOpenlException("Module contains critical errors", null, errorMessages);
         }
     }
 
-    public Collection<OpenLMessage> getAllMessages() {
-        return allMessages;
-    }
-
-    public Collection<OpenLMessage> getMessages() {
-        return messages;
-    }
-
     public Collection<IOpenClass> getTypes() {
         return openClass != null ? openClass.getTypes() : null;
-    }
-
-    public ClassLoader getClassLoader() {
-        return classLoader;
     }
 
 }
