@@ -1,12 +1,14 @@
 package org.openl.rules.calc;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.Stack;
+
+import lombok.Getter;
 
 import org.openl.binding.exception.AmbiguousFieldException;
 import org.openl.binding.impl.method.AOpenMethodDelegator;
@@ -26,6 +28,7 @@ public final class SpreadsheetResultOpenClass extends JavaOpenClass {
             "IN_PROGRESS",
             JavaOpenClass.OBJECT);
 
+    @Getter
     private XlsModuleOpenClass module;
     private final Map<String, IOpenField> strictMatchCache = new HashMap<>();
     private final Map<String, IOpenField> noStrictMatchCache = new HashMap<>();
@@ -44,7 +47,7 @@ public final class SpreadsheetResultOpenClass extends JavaOpenClass {
 
     @Override
     public Collection<IOpenClass> superClasses() {
-        return Collections.singleton(AnySpreadsheetResultOpenClass.INSTANCE);
+        return Set.of(AnySpreadsheetResultOpenClass.INSTANCE);
     }
 
     @Override
@@ -88,7 +91,7 @@ public final class SpreadsheetResultOpenClass extends JavaOpenClass {
                 noStrictMatchCache.put(fieldName.toLowerCase(), RESOLVING_IN_PROGRESS);
             }
             openField = super.getField(fieldName, strictMatch);
-            boolean g = SpreadsheetStructureBuilder.preventCellsLoopingOnThis.get() == null;
+            var g = SpreadsheetStructureBuilder.preventCellsLoopingOnThis.get() == null;
             if (openField == null && fieldName.startsWith("$")) {
                 if (module == null) {
                     openField = new SpreadsheetResultField(this, fieldName, JavaOpenClass.OBJECT);
@@ -110,7 +113,7 @@ public final class SpreadsheetResultOpenClass extends JavaOpenClass {
                                     SpreadsheetStructureBuilder.preventCellsLoopingOnThis.remove();
                                 }
                             }
-                            IOpenField f = customSpreadsheetResultOpenClass.getField(fieldName, strictMatch);
+                            var f = customSpreadsheetResultOpenClass.getField(fieldName, strictMatch);
                             if (f instanceof CustomSpreadsheetResultField field) {
                                 if (mergedField == null) {
                                     mergedField = field;
@@ -159,21 +162,21 @@ public final class SpreadsheetResultOpenClass extends JavaOpenClass {
             synchronized (this) {
                 if (this.customSpreadsheetResultOpenClass == null) {
                     // HERE
-                    String anySpreadsheetResultName = "AnySpreadsheetResult";
-                    int i = 0;
-                    boolean nameExists = this.module.getTypes()
+                    var anySpreadsheetResultName = "AnySpreadsheetResult";
+                    var i = 0;
+                    var nameExists = this.module.getTypes()
                             .stream()
                             .anyMatch(t -> t.getName()
                                     .equals(Spreadsheet.SPREADSHEETRESULT_TYPE_PREFIX + "AnySpreadsheetResult"));
                     while (nameExists) {
                         anySpreadsheetResultName = "AnySpreadsheetResult" + i++;
-                        String anySpreadsheetResultName0 = anySpreadsheetResultName;
+                        var anySpreadsheetResultName0 = anySpreadsheetResultName;
                         nameExists = this.module.getTypes()
                                 .stream()
                                 .anyMatch(t -> t.getName()
                                         .equals(Spreadsheet.SPREADSHEETRESULT_TYPE_PREFIX + anySpreadsheetResultName0));
                     }
-                    CustomSpreadsheetResultOpenClass customSpreadsheetResultOpenClass = new CustomAnySpreadsheetResultOpenClass(
+                    var customSpreadsheetResultOpenClass = new CustomAnySpreadsheetResultOpenClass(
                             anySpreadsheetResultName,
                             this.module,
                             null,
@@ -190,10 +193,6 @@ public final class SpreadsheetResultOpenClass extends JavaOpenClass {
             }
         }
         return this.customSpreadsheetResultOpenClass;
-    }
-
-    public XlsModuleOpenClass getModule() {
-        return module;
     }
 
     @Override
@@ -266,14 +265,14 @@ public final class SpreadsheetResultOpenClass extends JavaOpenClass {
         if (!super.equals(o))
             return false;
 
-        SpreadsheetResultOpenClass that = (SpreadsheetResultOpenClass) o;
+        var that = (SpreadsheetResultOpenClass) o;
 
         return Objects.equals(module, that.module);
     }
 
     @Override
     public int hashCode() {
-        int result = super.hashCode();
+        var result = super.hashCode();
         result = 31 * result + (module != null ? module.hashCode() : 0);
         return result;
     }
