@@ -8,6 +8,8 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.TreeMap;
 
+import lombok.Setter;
+
 import org.openl.rules.dt.DecisionTableRuleNode;
 import org.openl.rules.dt.DecisionTableRuleNodeBuilder;
 import org.openl.rules.dt.EqualsIndexDecisionTableRuleNode;
@@ -51,7 +53,7 @@ public class EqualsIndexV2 extends ARuleIndexV2 {
 
     private int[] findRules(Object value, DecisionTableRuleNode prevResult) {
         if (!(prevResult instanceof IDecisionTableRuleNodeV2)) {
-            int[] rules = findIndex(value);
+            var rules = findIndex(value);
             rules = combineSortedArrays(rules, emptyRules);
             return rules;
         }
@@ -59,11 +61,11 @@ public class EqualsIndexV2 extends ARuleIndexV2 {
     }
 
     private int[] getResultAndIntersect(Object value, IDecisionTableRuleNodeV2 prevResult) {
-        int[] prevRes = prevResult.getRules();
+        var prevRes = prevResult.getRules();
         if (prevRes.length == 0) {
             return EMPTY_ARRAY;
         }
-        int[] rules = findIndex(value);
+        var rules = findIndex(value);
         rules = combineSortedArrays(rules, emptyRules);
         return intersectionSortedArrays(rules, prevRes);
     }
@@ -71,7 +73,7 @@ public class EqualsIndexV2 extends ARuleIndexV2 {
     @Override
     public int[] collectRules() {
         int[] result = new int[rulesTotalSize];
-        int k = 0;
+        var k = 0;
         for (int[] arr : index.values()) {
             for (int ruleN : arr) {
                 result[k++] = ruleN;
@@ -148,6 +150,7 @@ public class EqualsIndexV2 extends ARuleIndexV2 {
         private Map<Object, int[]> result = null;
         private boolean comparatorBasedMap = false;
 
+        @Setter
         private ConditionCasts conditionCasts;
 
         public void addRule(int ruleN) {
@@ -156,10 +159,6 @@ public class EqualsIndexV2 extends ARuleIndexV2 {
 
         public void putEmptyRule(int ruleN) {
             emptyBuilder.addRule(ruleN);
-        }
-
-        public void setConditionCasts(ConditionCasts conditionCasts) {
-            this.conditionCasts = conditionCasts;
         }
 
         public void putValueToRule(Object value, int ruleN) {
@@ -182,14 +181,14 @@ public class EqualsIndexV2 extends ARuleIndexV2 {
                 }
             }
 
-            DecisionTableRuleNodeBuilder builder = map.computeIfAbsent(value, e -> new DecisionTableRuleNodeBuilder());
+            var builder = map.computeIfAbsent(value, e -> new DecisionTableRuleNodeBuilder());
 
             builder.addRule(ruleN);
         }
 
         public EqualsIndexV2 build() {
             if (map == null) {
-                result = Collections.emptyMap();
+                result = Map.of();
             } else {
                 for (Map.Entry<Object, DecisionTableRuleNodeBuilder> element : map.entrySet()) {
                     result.put(element.getKey(), element.getValue().makeRulesAry());
