@@ -4,7 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -18,9 +18,9 @@ class TestUnitTest {
         TestDescription test = mock(TestDescription.class);
         when(test.isExpectedResultDefined()).thenReturn(true);
         when(test.getExpectedResult()).thenReturn(0.93);
-        when(test.getFields()).thenReturn(Collections.singletonList(new ThisField(JavaOpenClass.DOUBLE)));
+        when(test.getFields()).thenReturn(List.of(new ThisField(JavaOpenClass.DOUBLE)));
 
-        ITestUnit unit = new TestUnit(test, 0.93, null, 100);
+        var unit = new TestUnit(test, 0.93, null, 100);
 
         assertEquals(0.93, unit.getActualResult());
         assertEquals(TestStatus.TR_OK, unit.getResultStatus());
