@@ -2,7 +2,6 @@ package org.openl.rules.webstudio.web.test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -31,12 +30,12 @@ public class SimpleParameterTreeNode extends ParameterDeclarationTreeNode {
 
     @Override
     public String getDisplayedValue() {
-        Object value = getValue();
+        var value = getValue();
         return FormattersManager.format(value);
     }
 
     public String getValueForEdit() {
-        Object value = getValue();
+        var value = getValue();
         if (value != null) {
             return FormattersManager.format(value);
         } else {
@@ -46,7 +45,7 @@ public class SimpleParameterTreeNode extends ParameterDeclarationTreeNode {
 
     @Override
     public String getNodeType() {
-        IOpenClass type = getType();
+        var type = getType();
         Class<?> instanceClass = type.getInstanceClass();
         if (boolean.class == instanceClass) {
             return "boolean";
@@ -64,14 +63,14 @@ public class SimpleParameterTreeNode extends ParameterDeclarationTreeNode {
     }
 
     public List<String> getValuesForSelect() {
-        IOpenClass type = getType();
+        var type = getType();
         if (type.getInstanceClass() == Boolean.class) {
             return Arrays.asList("", "true", "false");
         }
 
         IDomain<?> domain = type.getDomain();
         if (domain != null) {
-            List<String> result = new ArrayList<>();
+            var result = new ArrayList<String>();
             result.add("");
             for (Object o : domain) {
                 result.add(FormattersManager.format(o));
@@ -79,7 +78,7 @@ public class SimpleParameterTreeNode extends ParameterDeclarationTreeNode {
             return result;
         }
 
-        return Collections.emptyList();
+        return List.of();
     }
 
     public void setValueForEdit(String value) {
