@@ -2,17 +2,15 @@ package org.openl.studio.repositories.validator;
 
 import java.io.IOException;
 import java.io.RandomAccessFile;
-import java.nio.charset.Charset;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.HashSet;
-import java.util.Set;
-import java.util.stream.Stream;
+import java.util.Map;
 import jakarta.inject.Inject;
 
+import lombok.extern.slf4j.Slf4j;
 import org.eclipse.jgit.errors.CorruptObjectException;
 import org.eclipse.jgit.util.SystemReader;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -24,11 +22,13 @@ import org.openl.rules.project.resolving.ProjectResolver;
 import org.openl.rules.webstudio.util.NameChecker;
 import org.openl.rules.webstudio.web.repository.upload.zip.ZipCharsetDetector;
 import org.openl.rules.workspace.filter.PathFilter;
+import org.openl.studio.common.validation.FileIntegrityValidator;
 import org.openl.util.FileSignatureHelper;
 import org.openl.util.RuntimeExceptionWrapper;
 import org.openl.util.StringUtils;
 import org.openl.util.ZipUtils;
 
+@Slf4j
 @Component
 public class ZipArchiveValidator implements Validator {
 
@@ -48,33 +48,33 @@ public class ZipArchiveValidator implements Validator {
 
     @Override
     public void validate(Object target, Errors errors) {
-        Path archive = (Path) target;
-        if (!validateSignature(archive, errors)) {
+        var archive = (Path) target;
+        if (!validateSignature(archive, errors) || !validateIntegrity(archive, errors)) {
             return;
         }
-        Charset charset = zipCharsetDetector.detectCharset(() -> Files.newInputStream(archive));
+        var charset = zipCharsetDetector.detectCharset(() -> Files.newInputStream(archive));
         if (charset == null) {
             errors.reject("zip-archive.unknown.charset.message");
             return;
         }
 
         try (FileSystem fs = FileSystems.newFileSystem(ZipUtils.toJarURI(archive),
-                Collections.singletonMap("encoding", charset.name()))) {
+                Map.of("encoding", charset.name()))) {
 
-            Path walkRoot = fs.getPath("/");
+            var walkRoot = fs.getPath("/");
             if (ProjectResolver.getInstance().isRulesProject(walkRoot) == null) {
                 errors.reject("zip-archive.unknown.project.structure.message");
                 return;
             }
 
-            Set<Path> rejectedPaths = new HashSet<>();
-            try (Stream<Path> stream = Files.walk(walkRoot)
+            var rejectedPaths = new HashSet<Path>();
+            try (var stream = Files.walk(walkRoot)
                     .filter(p -> !walkRoot.equals(p))
                     .filter(p -> zipFilter.accept(p.toString()))) {
 
                 stream.forEach(path -> {
                     if (rejectedPaths.stream().noneMatch(r -> r.startsWith(path) || path.startsWith(r))) {
-                        for (int i = 0; i < path.getNameCount(); i++) {
+                        for (var i = 0; i < path.getNameCount(); i++) {
                             try {
                                 NameChecker.validatePath(path.getName(i).toString());
                             } catch (IOException e) {
@@ -86,7 +86,7 @@ public class ZipArchiveValidator implements Validator {
                             }
                         }
                         try {
-                            String p = path.toString().replace('\\', '/');
+                            var p = path.toString().replace('\\', '/');
                             if (p.charAt(0) == '/') {
                                 p = p.substring(1);
                             }
@@ -110,12 +110,12 @@ public class ZipArchiveValidator implements Validator {
     }
 
     private boolean validateSignature(Path archive, Errors errors) {
-        boolean isValid = true;
+        var isValid = true;
         if (!Files.isRegularFile(archive)) {
             errors.reject("zip-archive.invalid.archive.message");
             isValid = false;
         } else {
-            int sign = readSignature(archive);
+            var sign = readSignature(archive);
             if (!FileSignatureHelper.isArchiveSign(sign)) {
                 errors.reject("zip-archive.invalid.archive.message");
                 isValid = false;
@@ -127,8 +127,24 @@ public class ZipArchiveValidator implements Validator {
         return isValid;
     }
 
+    /**
+     * Verifies that the archive arrived complete: its own directory is read, and every entry is
+     * matched against the size and the checksum recorded for it. An upload that was cut short keeps
+     * a valid signature, so the signature alone does not tell a whole archive from a part of one.
+     */
+    private static boolean validateIntegrity(Path archive, Errors errors) {
+        try {
+            FileIntegrityValidator.verifyArchive(archive);
+            return true;
+        } catch (IOException e) {
+            log.debug("The uploaded archive did not pass the integrity check.", e);
+            errors.reject("zip-archive.damaged.archive.message", new String[]{e.getMessage()}, e.getMessage());
+            return false;
+        }
+    }
+
     private static int readSignature(Path path) {
-        try (RandomAccessFile raf = new RandomAccessFile(path.toFile(), "r")) {
+        try (var raf = new RandomAccessFile(path.toFile(), "r")) {
             return raf.readInt();
         } catch (IOException ignored) {
             return -1;
