@@ -1,17 +1,14 @@
 package org.openl.security.acl.repository;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 
 import org.springframework.security.acls.domain.PrincipalSid;
 import org.springframework.security.acls.model.AclCache;
-import org.springframework.security.acls.model.ObjectIdentity;
 import org.springframework.security.acls.model.Permission;
 import org.springframework.security.acls.model.Sid;
 import org.springframework.security.acls.model.SidRetrievalStrategy;
-import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -37,7 +34,7 @@ public class RepositoryAclServiceImpl extends SimpleRepositoryAclServiceImpl imp
     @Override
     @Transactional
     public void move(AProjectArtefact projectArtefact, String newPath) {
-        ObjectIdentity oi = oidProvider.getArtifactOid(projectArtefact);
+        var oi = oidProvider.getArtifactOid(projectArtefact);
         moveInternal(projectArtefact.getRepository().getName(), oi, newPath);
     }
 
@@ -60,9 +57,9 @@ public class RepositoryAclServiceImpl extends SimpleRepositoryAclServiceImpl imp
         if (LocalWorkspace.LOCAL_ID.equals(projectArtefact.getRepository().getId())) {
             return true;
         }
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        List<Sid> sids = sidRetrievalStrategy.getSids(authentication);
-        ObjectIdentity oi = oidProvider.getArtifactOid(projectArtefact);
+        var authentication = SecurityContextHolder.getContext().getAuthentication();
+        var sids = sidRetrievalStrategy.getSids(authentication);
+        var oi = oidProvider.getArtifactOid(projectArtefact);
         if (useParentStrategy) {
             oi = oidProvider.getParentOid(oi);
         }
@@ -72,26 +69,26 @@ public class RepositoryAclServiceImpl extends SimpleRepositoryAclServiceImpl imp
     @Override
     @Transactional
     public void deleteAcl(AProjectArtefact projectArtefact) {
-        ObjectIdentity oi = oidProvider.getArtifactOid(projectArtefact);
+        var oi = oidProvider.getArtifactOid(projectArtefact);
         aclService.deleteAcl(oi, true);
     }
 
     @Override
     @Transactional
     public boolean createAcl(AProjectArtefact projectArtefact, List<Permission> permissions, boolean force) {
-        ObjectIdentity oi = oidProvider.getArtifactOid(projectArtefact);
+        var oi = oidProvider.getArtifactOid(projectArtefact);
         return createAcl(oi, permissions, force);
     }
 
     @Override
     @Transactional
     public boolean hasAcl(AProjectArtefact projectArtefact) {
-        ObjectIdentity oi = oidProvider.getArtifactOid(projectArtefact);
+        var oi = oidProvider.getArtifactOid(projectArtefact);
         return hasAcl(oi);
     }
 
     protected String cutRepositoryId(String identifier) {
-        int d = identifier.indexOf(":");
+        var d = identifier.indexOf(":");
         if (d >= 0) {
             return identifier.substring(d + 1);
         }
@@ -100,7 +97,7 @@ public class RepositoryAclServiceImpl extends SimpleRepositoryAclServiceImpl imp
 
     @Override
     public String getPath(AProjectArtefact projectArtefact) {
-        ObjectIdentity oi = oidProvider.getArtifactOid(projectArtefact);
+        var oi = oidProvider.getArtifactOid(projectArtefact);
         return cutRepositoryId((String) oi.getIdentifier());
     }
 
@@ -108,17 +105,17 @@ public class RepositoryAclServiceImpl extends SimpleRepositoryAclServiceImpl imp
     @Transactional
     public List<Permission> listPermissions(AProjectArtefact projectArtefact, Sid sid) {
         if (sid == null) {
-            return Collections.emptyList();
+            return List.of();
         }
-        ObjectIdentity oi = oidProvider.getArtifactOid(projectArtefact);
+        var oi = oidProvider.getArtifactOid(projectArtefact);
         var permissions = listPermissions(oi, List.of(sid));
-        return permissions.getOrDefault(sid, Collections.emptyList());
+        return permissions.getOrDefault(sid, List.of());
     }
 
     @Override
     @Transactional
     public Map<Sid, List<Permission>> listPermissions(AProjectArtefact projectArtefact) {
-        ObjectIdentity oi = oidProvider.getArtifactOid(projectArtefact);
+        var oi = oidProvider.getArtifactOid(projectArtefact);
         return listPermissions(oi, null);
     }
 
