@@ -9,7 +9,6 @@ import java.net.URI;
 import jakarta.ws.rs.core.UriInfo;
 
 import io.swagger.v3.core.util.Json;
-import io.swagger.v3.oas.models.OpenAPI;
 import org.junit.jupiter.api.Test;
 
 class DefaultOpenApiProcessorTest {
@@ -21,14 +20,14 @@ class DefaultOpenApiProcessorTest {
 
         var processor = new DefaultOpenApiProcessor(Json.mapper().copy().setDefaultMergeable(true), "myService");
 
-        OpenAPI result = processor.apply(uriInfo);
+        var result = processor.apply(uriInfo);
 
         assertNotNull(result);
         assertNotNull(result.getInfo(), "default schema must contain an info section");
         assertEquals("myService", result.getInfo().getTitle());
         assertNotNull(result.getServers());
         assertEquals(1, result.getServers().size());
-        assertEquals("http://example.com/api/myService", result.getServers().get(0).getUrl());
+        assertEquals("http://example.com/api/myService", result.getServers().getFirst().getUrl());
     }
 
     @Test
@@ -37,9 +36,9 @@ class DefaultOpenApiProcessorTest {
         when(uriInfo.getRequestUri()).thenReturn(URI.create("http://h/x/openapi.yaml"));
 
         var processor = new DefaultOpenApiProcessor(Json.mapper().copy().setDefaultMergeable(true), "svc");
-        OpenAPI result = processor.apply(uriInfo);
+        var result = processor.apply(uriInfo);
 
         assertEquals("svc", result.getInfo().getTitle());
-        assertEquals("http://h/x", result.getServers().get(0).getUrl());
+        assertEquals("http://h/x", result.getServers().getFirst().getUrl());
     }
 }
